<resources>
    <string name="app_name">ExpensesTracker</string>
    <string name="you_are_not_a_member">You are not a member?</string>
    <string name="welcome">Welcome!</string>
    <string name="nice_to_see_you_again">Nice to see you again!</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_there">Hello There!</string>
    <string name="already_a_member">Already a member?</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password_length_error">password should be at least 8 characters</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email Id</string>
    <string name="invalid_email">Invalid Email Id</string>
    <string name="password_too_short">Password too Short</string>
    <string name="login_successful">Login Successful</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="fab">FAB</string>
    <string name="total">Total Spending</string>
    <string name="Expenses">Expenses</string>
    <string name="description">Description</string>
    <string name="description_low">description</string>
    <string name="value">Value</string>
    <string name="value_low">value</string>
    <string name="add">ADD</string>
    <string name="add_description">Add Description</string>
    <string name="add_value">Add Value</string>
    <string name="added">Successfully Added</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="add_your_expenses">Add Your Expenses</string>
    <string name="add_expense">Add Expense</string>
    <string name="users">Users</string>
    <string name="expenses">expenses</string>
    <string name="count">count</string>
    <string name="successful">Successful</string>
    <string name="email">email</string>
    <string name="signup_failed">Sign Up failed.</string>
    <string name="imageview">ImageView</string>
</resources>
