<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddExpenseActivity">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_margin="2dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/imageview" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="310dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/description"
                android:background="@drawable/round_background"
                android:backgroundTint="@color/dark"
                android:hint="@string/description"
                android:inputType="text"
                android:paddingStart="25sp"
                android:paddingEnd="25sp"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/etValue"
                android:layout_width="310dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/value"
                android:background="@drawable/round_background"
                android:backgroundTint="@color/dark"
                android:ems="10"
                android:hint="@string/value"
                android:inputType="number"
                android:paddingStart="25sp"
                android:paddingEnd="25sp"
                android:textColorHint="@color/gray" />

            <Button
                android:id="@+id/button"
                android:layout_width="162dp"
                android:layout_height="53dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/round_background"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/bold"
                android:onClick="addExpense"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>




    </ScrollView>
</layout>